// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
  id="Group 1"
  rows={null}
>
  <p
    className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
    fontSize="0.875rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.25px"
  >
    This is the first group
  </p>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
  id={null}
  rows={null}
>
  <p
    className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
    fontSize="0.875rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.25px"
  >
    Fields via Array
  </p>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      Inline Fields (Default)
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      Vertically Aligned Fields
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fAPoMC"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fAPoMC"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fAPoMC"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      Edge Aligned Fields
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      Field Group Gap XS
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      Field Group Gap Default
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 liKUbB Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      Field Group Gap XL
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cDhEJN Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
</section>
`;
